--- a/app/doacao.html
+++ b/app/doacao.html
@@ -29,7 +29,7 @@
             </nav>
         </header>
         <section>
-            <h1>Doações</h1>
+            <h1 class="mainTitle">Doações</h1>
             <p>Área para doações</p>
         </section>
     </main>
