--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,10 @@
             </nav>
         </header>
         <section>
-            <h1>QUEM SOMOS</h1>
+            <h1 class="mainTitle">QUEM SOMOS</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, illum? Ducimus labore a qui. Libero magnam amet molestias recusandae quasi ut eos, veniam nisi facere! Voluptate atque distinctio nulla obcaecati. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta voluptas voluptates, quibusdam soluta quod accusantium illo, odio maiores reiciendis unde eum impedit, earum ratione fugiat voluptatem iste quasi iusto alias!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut est eligendi nobis at recusandae enim alias officiis velit quaerat, magni necessitatibus facere dolorum officia ducimus cumque quidem ab, cum et!Lorem</p>
+            <h2 class="subTitle">Lorem</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos error neque fugit ratione, optio similique soluta dolores voluptates dolore officia ex obcaecati alias fuga asperiores sequi, aspernatur repudiandae minus tempore.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, illum? Ducimus labore a qui. Libero magnam amet molestias recusandae quasi ut eos, veniam nisi facere! Voluptate atque distinctio nulla obcaecati. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta voluptas voluptates, quibusdam soluta quod accusantium illo, odio maiores reiciendis unde eum impedit, earum ratione fugiat voluptatem iste quasi iusto alias!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut est eligendi nobis at recusandae enim alias officiis velit quaerat, magni necessitatibus facere dolorum officia ducimus cumque quidem ab, cum et!Lorem</p>
